part1/exercise11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-log-with-pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: timestamp-log-with-pingpong
  ports:
    - name: reader-port
      protocol: TCP
      port: 2345
      targetPort: 9901 # reader for pingpong and timestamp-log
    - name: pingpong-port
      protocol: TCP
      port: 2346
      targetPort: 9902 # pingpong
    - name: timestamp-log-port
      protocol: TCP
      port: 2347
      targetPort: 9903 # timestamp-log
