part1/exercise11/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timestamp-log-ingress
spec:
  rules:
    - http:
        paths:
          - path: /log
            pathType: Prefix
            backend:
              service:
                name: timestamp-log-with-pingpong-svc
                port:
                  number: 2347
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: timestamp-log-with-pingpong-svc
                port:
                  number: 2346
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timestamp-log-with-pingpong-svc
                port:
                  number: 2345
